// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropDownMenu > renders correctly 1`] = `
"<div data-v-4c455bfe=\\"\\" class=\\"dropdown\\">
  <div data-v-4c455bfe=\\"\\" class=\\"shared selection\\">
    <div data-v-4c455bfe=\\"\\" class=\\"selection-title\\"> title</div>
    <div data-v-4c455bfe=\\"\\" class=\\"\\"><svg data-v-4c455bfe=\\"\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\">
        <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
        <path fill=\\"currentColor\\" d=\\"M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z\\"></path>
      </svg></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`DropDownMenu > renders correctly with the items slot and click on dropdown element 1`] = `
"<div data-v-4c455bfe=\\"\\" class=\\"dropdown\\">
  <div data-v-4c455bfe=\\"\\" class=\\"shared selection\\">
    <div data-v-4c455bfe=\\"\\" class=\\"selection-title\\"> title</div>
    <div data-v-4c455bfe=\\"\\" class=\\"opened\\"><svg data-v-4c455bfe=\\"\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\">
        <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
        <path fill=\\"currentColor\\" d=\\"M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z\\"></path>
      </svg></div>
  </div>
  <div data-v-4c455bfe=\\"\\" class=\\"options\\"></div>
</div>"
`;
